--- a/test.yml
+++ b/test.yml
@@ -10,6 +10,9 @@
    vdom: "root"
    
   tasks:
+  - debug:
+        msg: "Trying to do something"
+        
   - name: Configure global attributes.
     fortios_system_global:
       vdom:  "{{ vdom }}"
