--- a/test.yml
+++ b/test.yml
@@ -4,17 +4,16 @@
   gather_facts: no
   collections:
    - fortinet.fortios
-
-
+   
+  connection: httpapi
   vars:
    vdom: "root"
-   
+   ansible_httpapi_use_ssl: yes
+   ansible_httpapi_validate_certs: no
+   ansible_httpapi_port: 443
   tasks:
-  - debug:
-        msg: "Trying to do something"
-
   - name: Display information about the top CPU processes.
     fortios_system_performance_top:
       vdom:  "{{ vdom }}"
       system_performance_top:
-        <delay>: "1"
+        <delay>: "<your_own_value>"
