--- a/test2.yml
+++ b/test2.yml
@@ -9,7 +9,7 @@
    vdom: "root"
    ssl_verify: "False"
   tasks:
-  - name: Configure IPv4 static routing tables.
+  - name: Configure global attributes.
     fortios_system_global::
       host:  "{{ host }}"
       username: "{{ username }}"
