--- a/TEDs.yml
+++ b/TEDs.yml
@@ -11,9 +11,14 @@
    ansible_httpapi_use_ssl: yes
    ansible_httpapi_validate_certs: no
    ansible_httpapi_port: 443
+   
   tasks:
-  - name: Configure global attributes.
+  - name: Atributos globales.
     fortios_system_global:
       vdom:  "{{ vdom }}"
       system_global:
+        admin_ssh_port: 2222
+        admin_telnet_port: 2323
+        admintimeout: 30
         hostname: "{{ hostname }}"
+        timezone: 87
