--- a/TEDs.yml
+++ b/TEDs.yml
@@ -8,7 +8,6 @@
   connection: httpapi
   vars:
    vdom: "root"
-   snmpmanager: "172.22.22.246"
    ansible_httpapi_use_ssl: yes
    ansible_httpapi_validate_certs: no
    ansible_httpapi_port: 443
@@ -32,5 +31,5 @@
         name: "T3chn0m4"
         id: "1"
         events: "cpu-high,mem-low,log-full,intf-ip,vpn-tun-up,vpn-tun-down,ha-switch,ha-hb-failure,ips-signature,ips-anomaly,av-virus,av-oversize,av-pattern,av-fragmented,fm-if-change,fm-conf-change,bgp-established,bgp-backward-transition,ha-member-up,ha-member-down,ent-conf-change,av-conserve,av-bypass,av-oversize-passed,av-oversize-blocked,ips-pkg-update,ips-fail-open,temperature-high,voltage-alert,power-supply-failure,faz-disconnect,wc-ap-up,wc-ap-down,fswctl-session-up,fswctl-session-down,load-balance-real-server-down,device-new,per-cpu-high,dhcp,ospf-nbr-state-change,ospf-virtnbr-state-change"
-        query-v1-status: "disable"
-        trap-v1-status: "disable"
+        query_v1_status: "disable"
+        trap_v1_status: "disable"
