--- a/TEDs.yml
+++ b/TEDs.yml
@@ -14,7 +14,7 @@
    ansible_httpapi_port: 443
    
   tasks:
-  - name: Atributos globales.
+  - name: Configuración de atributos globales.
     fortios_system_global:
       vdom:  "{{ vdom }}"
       system_global:
@@ -24,7 +24,7 @@
         hostname: "{{ hostname }}"
         timezone: 87
         
-  - name: SNMP.
+  - name: Configuración de SNMP.
     fortios_system_snmp_community:
       vdom:  "{{ vdom }}"
       state: "present"
@@ -38,3 +38,12 @@
         events: "cpu-high,mem-low,log-full,intf-ip,vpn-tun-up,vpn-tun-down,ha-switch,ha-hb-failure,ips-signature,ips-anomaly,av-virus,av-oversize,av-pattern,av-fragmented,fm-if-change,fm-conf-change,bgp-established,bgp-backward-transition,ha-member-up,ha-member-down,ent-conf-change,av-conserve,av-bypass,av-oversize-passed,av-oversize-blocked,ips-pkg-update,ips-fail-open,temperature-high,voltage-alert,power-supply-failure,faz-disconnect,wc-ap-up,wc-ap-down,fswctl-session-up,fswctl-session-down,load-balance-real-server-down,device-new,per-cpu-high,dhcp,ospf-nbr-state-change,ospf-virtnbr-state-change"
         query_v1_status: "disable"
         trap_v1_status: "disable"
+
+  - name: Creación de usuarios.
+    fortios_system_admin:
+      vdom:  "{{ vdom }}"
+      state: "present"
+      system_admin:
+        accprofile: "super_admin"
+        name: "technoma"
+        password: "callTechnoma*911"
