--- a/TEDs.yml
+++ b/TEDs.yml
@@ -59,27 +59,28 @@
   #      port:
   #        -
   #          name: "lan1"
+  -name: "WAN"
     fortios_system_interface:
-      - name: "WAN"
-        vdom:  "{{ vdom }}"
-        state: "present"
-        system_interface:
-          name: "wan"
-          mode: "static"
-          ip: "10.53.{{ num }}.2/30"
-          allowaccess: "ping,https,ssh,http"
-          alias: "Ufinet"
-          lldp_reception: "enable"
-          role: "wan"
-      - name: "10"
-        vdom:  "{{ vdom }}"
-        state: "present"
-        system_interface:
-          name: "VLAN 10"
-          ip: "10.50.{{ num }}.1/28"
-          allowaccess: "ping,https,ssh,http"
-          alias: "TED"
-          device_identification: "enable"
-          role: "lan"
-          interface: "lan1"
-          vlanid: "10"
+      vdom:  "{{ vdom }}"
+      state: "present"
+      system_interface:
+        name: "wan"
+        mode: "static"
+        ip: "10.53.{{ num }}.2/30"
+        allowaccess: "ping,https,ssh,http"
+        alias: "Ufinet"
+        lldp_reception: "enable"
+        role: "wan"
+  - name: "10"
+    fortios_system_interface:
+      vdom:  "{{ vdom }}"
+      state: "present"
+      system_interface:
+        name: "VLAN 10"
+        ip: "10.50.{{ num }}.1/28"
+        allowaccess: "ping,https,ssh,http"
+        alias: "TED"
+        device_identification: "enable"
+        role: "lan"
+        interface: "lan1"
+        vlanid: "10"
