--- a/TEDs.yml
+++ b/TEDs.yml
@@ -48,7 +48,7 @@
   #      name: "technoma"
   #      password: "callTechnoma*911"
         
-  - name: Configuración de interfaces.
+  #- name: Configuración de interfaces.
   #  fortios_system_virtual_switch:
   #    vdom:  "{{ vdom }}"
   #    state: "present"
