--- a/TEDs.yml
+++ b/TEDs.yml
@@ -77,10 +77,10 @@
       state: "present"
       system_interface:
         name: "VLAN 10"
-        ip: "10.50.{{ num }}.1/28"
-        allowaccess: "ping,https,ssh,http"
-        alias: "TED"
-        device_identification: "enable"
-        role: "lan"
-        interface: "lan1"
-        vlanid: "10"
+        #ip: "10.50.{{ num }}.1/28"
+        #allowaccess: "ping,https,ssh,http"
+        #alias: "TED"
+        #device_identification: "enable"
+        #role: "lan"
+        #interface: "lan1"
+        #vlanid: "10"
