--- a/TEDs.yml
+++ b/TEDs.yml
@@ -81,16 +81,16 @@
         alias: "Troncal TED"
         role: "lan"
         
-  #- name: VLAN10.
-  #  fortios_system_interface:
-  #    vdom: "{{ vdom }}"
-  #    state: "present"
-  #    system_interface:
-  #      name: "VLAN10"
-  #      ip: "10.50.{{ num }}.1/28"
-  #      allowaccess: "ping,https,ssh,http"
-  #      alias: "TED"
-  #      device_identification: "enable"
-  #      role: "lan"
-  #      interface: "lan1"
-  #      vlanid: "10"
+  - name: VLAN10.
+    fortios_system_interface:
+      vdom: "{{ vdom }}"
+      state: "present"
+      system_interface:
+        name: "VLAN10"
+        ip: "10.50.{{ num }}.1/28"
+        allowaccess: "ping,https,ssh,http"
+        alias: "TED"
+        device_identification: "enable"
+        role: "lan"
+        interface: "lan1"
+        vlanid: "10"
