--- a/TEDs.yml
+++ b/TEDs.yml
@@ -72,6 +72,21 @@
         lldp_reception: "enable"
         role: "wan"
         
+  - name: VLAN10.
+    fortios_system_interface:
+      vdom: "{{ vdom }}"
+      state: "present"
+      system_interface:
+        name: "VLAN10"
+        mode: "static"
+        ip: "10.50.{{ num }}.1/28"
+        allowaccess: "ping,https,ssh,http"
+        alias: "TED"
+        lldp_reception: "enable"
+        role: "lan"
+        vlanid: "10"
+        interface: "lan1"
+
   - name: Troncal.
     fortios_system_interface:
       vdom: "{{ vdom }}"
@@ -81,16 +96,16 @@
         alias: "Troncal TED"
         role: "lan"
         
-  - name: VLAN10.
-    fortios_system_interface:
-      vdom: "{{ vdom }}"
-      state: "present"
-      system_interface:
-        name: "VLAN10"
-        ip: "10.50.{{ num }}.1/28"
-        allowaccess: "ping,https,ssh,http"
-        alias: "TED"
-        device_identification: "enable"
-        role: "lan"
-        interface: "lan1"
-        vlanid: "10"
+  #- name: VLAN10.
+  #  fortios_system_interface:
+  #    vdom: "{{ vdom }}"
+  #    state: "present"
+  #    system_interface:
+  #      name: "VLAN10"
+  #      ip: "10.50.{{ num }}.1/28"
+  #      allowaccess: "ping,https,ssh,http"
+  #      alias: "TED"
+  #      device_identification: "enable"
+  #      role: "lan"
+  #      interface: "lan1"
+  #      vlanid: "10"
