--- a/TEDs.yml
+++ b/TEDs.yml
@@ -178,113 +178,150 @@
   #          end_ip: "10.50.{{ num }}.46"
   #      dns_server1: "172.25.80.10"
 
-  - name: Objeto LAN TED.
-    fortios_firewall_address:
-      vdom:  "{{ vdom }}"
-      state: "present"
-      firewall_address:
-        name: "LAN_TED"
-        subnet: "10.50.{{ num }}.0 255.255.255.240"
-  - name: Objeto LAN CAMARA.
-    fortios_firewall_address:
-      vdom:  "{{ vdom }}"
-      state: "present"
-      firewall_address:
-        name: "LAN_CAMARA"
-        subnet: "10.50.{{ num }}.16 255.255.255.240"
-  - name: Objeto LAN TV.
-    fortios_firewall_address:
-      vdom:  "{{ vdom }}"
-      state: "present"
-      firewall_address:
-        name: "LAN_TV"
-        subnet: "10.50.{{ num }}.32 255.255.255.240"
-  - name: Objeto LAN 10.192.20.0/24.
-    fortios_firewall_address:
-      vdom:  "{{ vdom }}"
-      state: "present"
-      firewall_address:
-        name: "LAN_10.192.20.0/24"
-        subnet: "10.192.20.0 255.255.255.0"
-  - name: Objeto LAN 172.25.80.0/24.
-    fortios_firewall_address:
-      vdom:  "{{ vdom }}"
-      state: "present"
-      firewall_address:
-        name: "LAN_172.25.80.0/24"
-        subnet: "172.25.80.0 255.255.255.0"
-  - name: Objeto LAN 172.25.84.0/24.
-    fortios_firewall_address:
-      vdom:  "{{ vdom }}"
-      state: "present"
-      firewall_address:
-        name: "LAN_172.25.84.0/24"
-        subnet: "172.25.84.0 255.255.255.0"
-  - name: Objeto LAN MGMT.
-    fortios_firewall_address:
-      vdom:  "{{ vdom }}"
-      state: "present"
-      firewall_address:
-        name: "LAN_MGMT"
-        subnet: "10.50.{{ num }}.48 255.255.255.240"
-  - name: Objeto LAN 172.20.20.0/23.
-    fortios_firewall_address:
-      vdom:  "{{ vdom }}"
-      state: "present"
-      firewall_address:
-        name: "LAN_172.20.20.0/23"
-        subnet: "172.20.20.0 255.255.254.0"
-  - name: Objeto LAN 172.25.90.0/24.
-    fortios_firewall_address:
-      vdom:  "{{ vdom }}"
-      state: "present"
-      firewall_address:
-        name: "LAN_172.25.90.0/24"
-        subnet: "172.25.90.0 255.255.255.0"
-  - name: Objeto SSL ITTI.
-    fortios_firewall_address:
-      vdom:  "{{ vdom }}"
-      state: "present"
-      firewall_address:
-        name: "SSL-ITTI"
-        subnet: "10.212.134.0 255.255.255.0"
-  - name: Objeto Monitoreo Technoma.
-    fortios_firewall_address:
-      vdom:  "{{ vdom }}"
-      state: "present"
-      firewall_address:
-        name: "Monitoreo Technoma"
-        subnet: "172.22.22.246 255.255.255.255"
+  #- name: Objeto LAN TED.
+  #  fortios_firewall_address:
+  #    vdom:  "{{ vdom }}"
+  #    state: "present"
+  #    firewall_address:
+  #      name: "LAN_TED"
+  #      subnet: "10.50.{{ num }}.0 255.255.255.240"
+  #- name: Objeto LAN CAMARA.
+  #  fortios_firewall_address:
+  #    vdom:  "{{ vdom }}"
+  #    state: "present"
+  #    firewall_address:
+  #      name: "LAN_CAMARA"
+  #      subnet: "10.50.{{ num }}.16 255.255.255.240"
+  #- name: Objeto LAN TV.
+  #  fortios_firewall_address:
+  #    vdom:  "{{ vdom }}"
+  #    state: "present"
+  #    firewall_address:
+  #      name: "LAN_TV"
+  #      subnet: "10.50.{{ num }}.32 255.255.255.240"
+  #- name: Objeto LAN 10.192.20.0/24.
+  #  fortios_firewall_address:
+  #    vdom:  "{{ vdom }}"
+  #    state: "present"
+  #    firewall_address:
+  #      name: "LAN_10.192.20.0/24"
+  #      subnet: "10.192.20.0 255.255.255.0"
+  #- name: Objeto LAN 172.25.80.0/24.
+  #  fortios_firewall_address:
+  #    vdom:  "{{ vdom }}"
+  #    state: "present"
+  #    firewall_address:
+  #      name: "LAN_172.25.80.0/24"
+  #      subnet: "172.25.80.0 255.255.255.0"
+  #- name: Objeto LAN 172.25.84.0/24.
+  #  fortios_firewall_address:
+  #    vdom:  "{{ vdom }}"
+  #    state: "present"
+  #    firewall_address:
+  #      name: "LAN_172.25.84.0/24"
+  #      subnet: "172.25.84.0 255.255.255.0"
+  #- name: Objeto LAN MGMT.
+  #  fortios_firewall_address:
+  #    vdom:  "{{ vdom }}"
+  #    state: "present"
+  #    firewall_address:
+  #      name: "LAN_MGMT"
+  #      subnet: "10.50.{{ num }}.48 255.255.255.240"
+  #- name: Objeto LAN 172.20.20.0/23.
+  #  fortios_firewall_address:
+  #    vdom:  "{{ vdom }}"
+  #    state: "present"
+  #    firewall_address:
+  #      name: "LAN_172.20.20.0/23"
+  #      subnet: "172.20.20.0 255.255.254.0"
+  #- name: Objeto LAN 172.25.90.0/24.
+  #  fortios_firewall_address:
+  #    vdom:  "{{ vdom }}"
+  #    state: "present"
+  #    firewall_address:
+  #      name: "LAN_172.25.90.0/24"
+  #      subnet: "172.25.90.0 255.255.255.0"
+  #- name: Objeto SSL ITTI.
+  #  fortios_firewall_address:
+  #    vdom:  "{{ vdom }}"
+  #    state: "present"
+  #    firewall_address:
+  #      name: "SSL-ITTI"
+  #      subnet: "10.212.134.0 255.255.255.0"
+  #- name: Objeto Monitoreo Technoma.
+  #  fortios_firewall_address:
+  #    vdom:  "{{ vdom }}"
+  #    state: "present"
+  #    firewall_address:
+  #      name: "Monitoreo Technoma"
+  #      subnet: "172.22.22.246 255.255.255.255"
 
-  - name: Grupo de direcciones sucursal
-    fortios_firewall_addrgrp:
+  #- name: Grupo de direcciones sucursal
+  #  fortios_firewall_addrgrp:
+  #    vdom:  "{{ vdom }}"
+  #    state: "present"
+  #    firewall_addrgrp:
+  #      name: "LAN_SUCURSAL"
+  #      member:
+  #        -
+  #          name: "LAN_CAMARA"
+  #        -
+  #          name: "LAN_TV"
+  #        -
+  #          name: "LAN_MGMT"
+  #        -
+  #          name: "LAN_TED"
+  #- name: Grupo de direcciones matriz
+  #  fortios_firewall_addrgrp:
+  #    vdom:  "{{ vdom }}"
+  #    state: "present"
+  #    firewall_addrgrp:
+  #      name: "LAN_MATRIZ"
+  #      member:
+  #        -
+  #          name: "LAN_10.192.20.0/24"
+  #        -
+  #          name: "LAN_172.25.80.0/24"
+  #        -
+  #          name: "LAN_172.25.84.0/24"
+  #        -
+  #          name: "LAN_172.20.20.0/23"
+  #        -
+  #          name: "LAN_172.25.90.0/24"
+
+  - name: Configuracion de fase 1 VPN a DC Tigo.
+    fortios_vpn_ipsec_phase1_interface:
       vdom:  "{{ vdom }}"
       state: "present"
-      firewall_addrgrp:
-        name: "LAN_SUCURSAL"
-        member:
-          -
-            name: "LAN_CAMARA"
-          -
-            name: "LAN_TV"
-          -
-            name: "LAN_MGMT"
-          -
-            name: "LAN_TED"
-  - name: Grupo de direcciones matriz
-    fortios_firewall_addrgrp:
+      vpn_ipsec_phase1_interface:
+        name: "DC-TIGO_Ufinet"
+        interface: "wan"
+        ike_version: "2"
+        peertype: "any"
+        net_device: "disable"
+        proposal: "aes256-sha256"
+        dhgrp: "14"
+        remote_gw: "10.53.{{ num }}.1"
+        psksecret: {{ psk }}
+  - name: Configuracion de fase 2 VPN a DC Tigo.
+    fortios_vpn_ipsec_phase2_interface:
       vdom:  "{{ vdom }}"
       state: "present"
-      firewall_addrgrp:
-        name: "LAN_MATRIZ"
-        member:
-          -
-            name: "LAN_10.192.20.0/24"
-          -
-            name: "LAN_172.25.80.0/24"
-          -
-            name: "LAN_172.25.84.0/24"
-          -
-            name: "LAN_172.20.20.0/23"
-          -
-            name: "LAN_172.25.90.0/24"
+      vpn_ipsec_phase2_interface:
+        name: "DC-TIGO_Ufinet"
+        phase1name: "DC-TIGO_Ufinet"
+        proposal: "aes256-sha256"
+        pfs: "disable"
+
+  - name: Configuracion de tunel VPN.
+    fortios_system_interface:
+      vdom: "{{ vdom }}"
+      state: "present"
+      system_interface:
+        name: "DC-TIGO_Ufinet"
+        type: "tunnel"
+        vdom: "{{ vdom }}"
+        ip: "10.56.{{ num }}.2/32"
+        remote_ip: "10.56.{{ num }}.1/32"
+        allowaccess: "ping,https,ssh,http"
+        interface: "wan"
